# betting-software-test-task

./: README.md  docker-compose.yaml
bet_maker_service/: Dockerfile  pyproject.toml
bet_maker_service/app/: main.py
bet_maker_service/app/infrastructure/: db.py  redis.py  settings.py
bet_maker_service/app/models/: models.py
bet_maker_service/app/repository/: models.py  repository.py
bet_maker_service/app/service/: bet_service.py
line_provider_service/: Dockerfile  pyproject.toml
line_provider_service/app/: app_types.py  main.py  settings.py
line_provider_service/app/services/: event_provider.py
line_provider_service/app/storage/: local_storage.py  storage.py
